# 34.4_capstonethree_fakenewsdetection

./: Makefile  README.md  environment.yml  pyproject.toml
34.4_capstonethree_fakenewsdetection/: __init__.py  dataset.py  features.py  plots.py
34.4_capstonethree_fakenewsdetection/modeling/: predict.py  train.py
docs/: BenoitLoze_CapstoneThree_FakeNewsDetection_ProjectProposal.pptx  Benoit_Loze_Capstone_Three_Project_Ideas.odt  mkdocs.yml
docs/docs/: index.md
notebooks/: CapstoneThree_DataWrangling_EDA.ipynb
