[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "34.4_capstonethree_fakenewsdetection"
version = "0.0.1"
description = "Springboard Capstone Three Fake News Detection"
authors = [
  { name = "Benoit Loze" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["34.4_capstonethree_fakenewsdetection"]
include = ["pyproject.toml", "34.4_capstonethree_fakenewsdetection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["34.4_capstonethree_fakenewsdetection"]
force-sort-within-sections = true

